WIP continue with waste